# dashborion

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  handler.py  infra.config.example.json  package-lock.json  package.json  pnpm-workspace.yaml  pyproject.toml  sst-env.d.ts  sst.config.ts  sst.pyi  tsconfig.json  turbo.json
auth/: package.json
auth/scripts/: bundle.js
backend/: __init__.py  app_config.py  authorizer.py  config.py  dev_server.py  handler.py  sst.pyi
backend/_legacy/: api.py
backend/admin/: __init__.py  handler.py
backend/auth/: __init__.py  admin_handlers.py  decorators.py  device_flow.py  handler.py  handlers.py  middleware.py  models.py  permissions.py  service_auth.py  session_auth.py  sigv4_auth.py  sigv4_sts_auth.py  user_management.py
backend/cache/: base.py  dynamodb.py  policies.py
backend/comparison/: __init__.py  handler.py
backend/config/: __init__.py  handler.py
backend/discovery/: __init__.py  handler.py  providers.py
backend/docs/: CONFIGURATION.md
backend/events/: __init__.py  handler.py
backend/health/: __init__.py  handler.py
backend/infrastructure/: __init__.py  handler.py
backend/pipelines/: __init__.py  handler.py
backend/providers/: __init__.py  base.py
backend/services/: __init__.py  handler.py
backend/shared/: __init__.py  kms_crypto.py  rbac.py  response.py
backend/utils/: __init__.py  aws.py  instance_specs.py
cli/: README.md  pyproject.toml  sst.pyi
cli/dashborion/: __init__.py  cli.py  main.py
cli/dashborion/collectors/: __init__.py  api.py  aws.py  ecs.py  eks.py  infrastructure.py  k8s_cli.py  kubernetes.py
cli/dashborion/commands/: __init__.py  admin.py  auth.py  config_registry.py  context.py  diagram.py  env.py  infra.py  k8s.py  pipelines.py  project.py  services.py
cli/dashborion/config/: cli_config.py  components.py  settings.py
cli/dashborion/generators/: diagram.py  diagram_utils.py
cli/dashborion/publishers/: confluence.py
cli/dashborion/utils/: __init__.py  api_client.py  output.py  sigv4_identity.py
docs/: ARCHITECTURE-OPENSOURCE.md  CLI_API_MIGRATION.md  DASHBORION_PLUGIN_ARCHITECTURE_REPORT.md  FEATURES.md  LOCAL-DEVELOPMENT.md  SECURITY_ARCHITECTURE.md  WORKPLAN.md  coherence-analysis-2026-01-12.md  config-registry.md
docs/archive/: README.md  SST_MIGRATION_ASSESSMENT.md  STABILIZATION-PLAN.md  TODO-discovery-cache.md  UNIFIED_ORCHESTRATOR_PROPOSAL.md  investigation-workloads-display.md
examples/multi-account/: sst.config.ts
examples/simple/: sst.config.ts
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: config.example.json  config.json
frontend/src/: App.jsx  AppRouter.jsx  ConfigContext.jsx  index.css  main.jsx
infra/: api.ts  config.ts  dynamodb.ts  frontend.ts  index.ts  kms.ts  lambdas.ts  naming.ts  ssm.ts  tags.ts
migration-backup/dashborion-backup-20260110_220825/: dashborion-homebox-audit.json  dashborion-homebox-device-codes.json  dashborion-homebox-groups.json  manifest.json  (+3 more)
scripts/: migrate-env-format.py  seed-localstack.sh  setup-localstack.sh
terraform/: api_gateway.tf  cloudfront.tf  data.tf  global_locals.tf  global_variables.tf  kms.tf  lambda.tf  locals.tf  main.tf  outputs.tf  provider.tf  s3.tf  terraform.tf  variables.tf
(+64 files in other folders)
